fixed mobile horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ footer nav .footer-nav, footer nav .social {
 }
 
 .container img {
-  max-width: 100%;
   display: block;
 }
 
@@ -777,7 +776,7 @@ footer nav .social svg:hover {
   }
 }
 
-@media screen and (min-width: 751px) and (max-width: 1260px) {
+@media screen and (min-width: 752px) and (max-width: 1260px) {
   main .brand {
     width: 80%;
   }
@@ -834,7 +833,7 @@ footer nav .social svg:hover {
   }
 }
 
-@media screen and (min-width: 751px) and (max-width: 965px) {
+@media screen and (min-width: 752px) and (max-width: 965px) {
   .container {
     display: -ms-grid;
     display: grid;
